* Added support for EndState transitions on exception, typically thrown as party of an entry action.
  Transition.execute now accepts the base State type now, no longer requiring a TransitionableState reference.
* Made execution state restorer strategy always apply, updated execution impl types to keep transient 
  and serialized references in sync for VM clustering purposes.
    
Package org.springframework.webflow.execution
* Decoupled the central RequestContext interface from the flow execution engine implementation.
* Renamed the "flow" property of FlowExecutionContext to "definition" for consistency.
* Renamed the "flow" property of FlowSession to "definition" for consistency.
* Renamed FlowRedirect to LaunchFlowRedirect for clarity.
* Made all modifiable execution data maps "MutableAttributeMap" references: this includes 
  "request scope", "flow scope", and "conversation scope".  Umodifiable maps are simply plain
  "AttributeMap" references: this includes request context attributes, flow execution system
  attributes, and flow definition attributes.
* Introduced FlowExecutionFactory for encapsulating the construction of a FlowExecution from a FlowDefinition.
* Moved generic FlowExcutionFactory support code into "factory" subpackage.
* Added support for "flow execution attributes" for setting system parameters that can affect flow execution.
* Added support for listening to "exceptionThrown" events in a FlowExecution - see FlowExecutionListener.
* Fixed inconsistency in continuation id parsing within ClientContinuationFlowExecutionRepository.
* Removed FlowExecutionRepositoryFactory abstraction, simplifying overall use of the
  FlowExecutionRepository subsystem.
* Improved support for customization of FlowExecutionContinuation creation via the FlowExecutionContinuationFactory.
  
Package org.springframework.webflow.executor
* Decoupled executor subsystem from the flow execution engine implementation and assumptions about engine defaults.